--- a/agendamentodisparo.css
+++ b/agendamentodisparo.css
@@ -1,30 +1,59 @@
 body {
-  background-color: #191c24;
+  background: transparent;
   color: #fff;
-  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
-
+p{
+  color:#3B807F ;
+}
+.form-group{
+  margin: 1em;
+}
 .form-container {
+  background: #191C24;
+  border-radius: 10px;
+  margin: 1em;
+  border: 1px solid #3B807F;
   max-width: 500px;
-  margin: 0 auto;
+  padding: 1em;
 }
 
 .form-control {
-  background-color: #343a40;
+  background-color: #3B807F;
   color: #fff;
+  border: none;
 }
 
+.form-control:focus {
+  background-color: #164345;
+  color: #fff;
+  border-color: #3B807F;
+  box-shadow: none;
+}
+
+.form-control::placeholder {
+  color: #dfdcdc;
+}
 .btn-primary,
 .btn-secondary {
-  background-color: #343a40;
+  background-color: #57B9AA;
   color: #fff;
-  border-color: #343a40;
+  font-weight: 600;
+  font-size: 17px;
+  border-color: #3B807F;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  padding: .6em 1.8em;
 }
 
 .btn-primary:hover,
 .btn-secondary:hover {
-  background-color: #495057;
-  border-color: #495057;
+  background-color: #3B807F;
+  border-color: #57B9AA;
 }
 
 .form-title {
@@ -40,6 +69,7 @@ body {
 .qr-code-section {
   text-align: center;
   margin-top: 30px;
+  display: none;
 }
 
 .qr-code-message {
