--- a/editarDados.css
+++ b/editarDados.css
@@ -1,10 +1,71 @@
 body {
-    background-color: #191c24;
-    color: #fff;
-    padding-top: 20px;
+  background: transparent;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+p{
+  color:#3B807F ;
+}
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
   }
+.form-container {
+  background: #191C24;
+  border-radius: 10px;
+  margin: 1em;
+  border: 1px solid #3B807F;
+  max-width: 500px;
+  padding: 1em;
+}
 
   .form-control {
-    background-color: #343a40;
+    background-color: #3B807F;
     color: #fff;
+    border: none;
+  }
+  
+  .form-control:focus {
+    background-color: #164345;
+    color: #fff;
+    border-color: #3B807F;
+    box-shadow: none;
+  }
+  
+  .form-control::placeholder {
+    color: #dfdcdc;
+  }
+  .btn-primary,
+  .btn-secondary {
+    background-color: #57B9AA;
+    color: #fff;
+    font-weight: 600;
+    font-size: 17px;
+    border-color: #3B807F;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    padding: .6em 1.8em;
+  }
+  
+  .btn-primary:hover,
+  .btn-secondary:hover {
+    background-color: #3B807F;
+    border-color: #57B9AA;
+  }
+  .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .form-title {
+    margin-bottom: 20px;
+  }
+
+  .btn-submit {
+    width: 100%;
   }
