--- a/telaupload.css
+++ b/telaupload.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #1e2120;
+  background: transparent;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -8,19 +8,14 @@ body {
   margin: 0;
 }
 p{
-  color:#00D201 ;
-}
-
-.container {
-  background-color: #1e2120;
-  /* border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px; */
+  color:#3B807F ;
 }
 
 .card {
-  background-color: #2b2e30;
+  background-color: #191C24;
   border-radius: 10px;
   margin: 1em;
+  border: 1px solid #3B807F;
 }
 .margin-card{
   margin: 0 auto;
@@ -31,30 +26,31 @@ p{
 }
 
 .btn-primary {
-  background-color: #00D201;
+  background-color: #57B9AA;
   color: #fff;
   font-weight: 600;
-  border-color: #00D201;
+  font-size: 17px;
+  border-color: #3B807F;
   border-radius: 5px;
   transition: background-color 0.3s ease;
   padding: .6em 1.8em;
 }
 
 .btn-primary:hover {
-  background-color: #008d01;
-  border-color: #008d01;
+  background-color: #3B807F;
+  border-color: #57B9AA;
 }
 
 .form-control {
-  background-color: #4e4e4e;
+  background-color: #3B807F;
   color: #fff;
-  border-color: #2b2e30;
+  border: none;
 }
 
 .form-control:focus {
-  background-color: #828383;
+  background-color: #164345;
   color: #fff;
-  border-color: #2b2e30;
+  border-color: #3B807F;
   box-shadow: none;
 }
 
