add dados teste e mudei cor da progress bar

--- a/gerenciamento2.css
+++ b/gerenciamento2.css
@@ -38,6 +38,7 @@ text-align:center!important;
   }
   .progress-bar {
     background-color: #1affdd;
+    color:#161635 ;
 }
 
 /* Espaçamento entre botões na coluna Ações */
